Concept shift partition strategy
+ variable and some validation/typo fixes in concept drift strategy